# STM32-AudioTemplates

./: .gitignore  README.md
STM32F411-Blackpill/: CMakeLists.txt
STM32F411-Blackpill/source/: CMakeLists.txt
STM32F411-Blackpill/source/app/: main.c
STM32F411-Blackpill/source/bsp/: audio.c  audio.h  board.c  board.h  pins.h
STM32F411-Blackpill/source/drivers/HAL_LL/inc/: stm32f4xx_ll_dma.h
STM32F411-Blackpill/source/drivers/STM32F4xx/Device/Include/: stm32f411xe.h
STM32F411-Discovery/: CMakeLists.txt
STM32F411-Discovery/cmake/: stm_arm_gcc.cmake
STM32F411-Discovery/source/: CMakeLists.txt
STM32F411-Discovery/source/app/: main.c
STM32F411-Discovery/source/bsp/: audio.c  audio.h  board.c  board.h  pins.h
STM32F411-Discovery/source/drivers/HAL_LL/inc/: stm32f4xx_ll_dma.h  stm32f4xx_ll_i2c.h
STM32F411-Discovery/source/drivers/STM32F4xx/Device/Include/: system_stm32f4xx.h
STM32F411-Discovery/source/startup/: startup_stm32f411ceux.s
STM32F767ZI-Nucleo/: CMakeLists.txt  CMakePresets.json
STM32F767ZI-Nucleo/cmake/: stm_arm_gcc.cmake
STM32F767ZI-Nucleo/source/: CMakeLists.txt
STM32F767ZI-Nucleo/source/app/: main.c
STM32F767ZI-Nucleo/source/bsp/: audio.c  audio.h  board.c  board.h  pins.h
STM32F767ZI-Nucleo/source/drivers/HAL_LL/inc/: stm32f7xx_ll_rcc.h
STM32F767ZI-Nucleo/source/startup/: startup_stm32f767xx.s
